--- a/face-recognition-api/package.json
+++ b/face-recognition-api/package.json
@@ -2,7 +2,7 @@
   "name": "face-recognition-api",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,7 +15,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "bcrypt": "^3.0.7",
-    "nodemon": "^2.0.1"
+    "bcrypt": "^3.0.8",
+    "nodemon": "^2.0.2"
   }
 }
