--- a/face-recognition-api/package.json
+++ b/face-recognition-api/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "clarifai": "^2.9.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.20.10",
-    "pg": "^7.18.2"
+    "pg": "^7.18.2",
+    "url-exists": "^1.0.3"
   },
   "devDependencies": {
     "bcrypt": "^4.0.0",
