--- a/face-recognition-api/package.json
+++ b/face-recognition-api/package.json
@@ -10,16 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "clarifai": "^2.9.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "knex": "^0.21.10",
+    "knex": "^0.21.16",
     "pg": "^8.0.3",
     "url-exists": "^1.0.3"
   },
   "devDependencies": {
-    "bcrypt": "^5.0.0",
     "nodemon": "^2.0.2"
   }
 }
