docker-compose && postgres container added

--- a/face-recognition-api/package.json
+++ b/face-recognition-api/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.16",
+    "morgan": "^1.10.0",
     "pg": "^8.0.3",
     "url-exists": "^1.0.3"
   },
